# easyexif

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  demo.cpp  exif.cpp  exif.h  test.sh
test-images/: bb-android.jpg.expected  down-mirrored.jpg.expected  evil1.jpg.expected  lens_info.jpg.expected  lukas12p.jpg.expected  right.jpg.expected  short-ascii-II.jpg.expected  short-ascii-MM.jpg.expected  sony-alpha-6000.jpg.expected  test1.jpg.expected  test2.jpg.expected  test3.jpg.expected
